--- a/src/main/webapp/view/html/company-home.html
+++ b/src/main/webapp/view/html/company-home.html
@@ -32,22 +32,34 @@
 
 <div id="section">
     <div class="floating-box">
-        <form>
-            <input type="image" src="view/images/new-emp.jpeg" alt="submit" width="250" height="250">
-        </form>
+        <a href="view/html/new-employee.html">
+            <img src="view/images/new-emp.jpeg" width="250" height="250">
+        </a>
         <br><b>New Employee</b>
     </div>
     <div class="floating-box">
-        <form>
-            <input type="image" src="view/images/update-emp.jpeg" alt="submit" width="250" height="250">
-        </form>
+        <a href="view/html/update-employee.html">
+            <img src="view/images/update-emp.jpeg" width="250" height="250">
+        </a>
         <br><b>Update Employee</b>
     </div>
     <div class="floating-box">
-        <form>
-            <input type="image" src="view/images/remuneration.jpeg" alt="submit" width="250" height="250">
-        </form>
+        <a href="view/html/new-employee.html">
+            <img src="view/images/workhours.jpeg" width="250" height="250">
+        </a>
+        <br><b>Work Tracking</b>
+    </div>
+    <div class="floating-box">
+        <a href="view/html/new-employee.html">
+            <img src="view/images/remuneration.jpeg" width="250" height="250">
+        </a>
         <br><b>Employee Remuneration</b>
+    </div>
+    <div class="floating-box">
+        <a href="view/html/new-employee.html">
+            <img src="view/images/logout.jpeg" width="250" height="250">
+        </a>
+        <br><b>Logout</b>
     </div>
     <div class="after-box"/>
 </div>
